--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
 <body>
-  <script src="./js/functions.js"></script>
+  <main class="main">
+    <h1 class="main__title">
+      Generator secure password
+    </h1>
+    <h2 class="main__result">You password: <span> </span> </h2>
+    
+    <button class="main__button">
+      Generate
+    </button>
+    <button class="main__button main__button--copy">
+      Copy
+    </button>
+  </main>
+  <script src="./js/main.js"></script>
 </body>
 </html>
